# vne

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  project.md  run-example
scripts/: run-clangd
spec/v1/: spec.md
spec/v1/example/: another-scenario.md  config.toml  main.md
spec/v1/hello-world/: config.toml  main.md
src/: main.cpp
src/engine/: audio_manager.cpp  audio_manager.hpp  background_manager.cpp  background_manager.hpp  choice_manager.cpp  choice_manager.hpp  dialogue_manager.cpp  dialogue_manager.hpp  engine.cpp  engine.hpp  font_manager.cpp  font_manager.hpp  interpreter.cpp  interpreter.hpp  sprite_manager.cpp  sprite_manager.hpp  variable.cpp  variable.hpp
src/helpers/: overloaded.hpp
src/parser/: exhaustive_parser.hpp  instruction.cpp  instruction.hpp  parse_result.cpp  parse_result.hpp  parseable.hpp  parsed_script.cpp  parsed_script.hpp  parser.cpp  parser.hpp
